--- a/includes/js/proud-actions-app/app/views/apps/311App/faq/faq.html
+++ b/includes/js/proud-actions-app/app/views/apps/311App/faq/faq.html
@@ -1,4 +1,5 @@
 <div class="slide-left-2 column">
+  <search></search>
   <ol class="breadcrumb clean"><li class="active"><i class="fa fa-th"></i> Select answer type</li></ol>
   <dl class="angular-311-2col">
     <dd ng-repeat="item in terms | termsNoParent:$root.categories" class="col-sm-6 col-md-4" ng-class="{'active' : item.slug == active.slug, 'expanded': $root.displayExpanded('answers')}">
