--- a/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-create-categories.html
+++ b/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-create-categories.html
@@ -1,4 +1,5 @@
 <div class="slide-left-2">
+  <search></search>
   <ol class="breadcrumb clean">
     <li class="active">
       <i class="fa fa-th"></i> Select issue type
