--- a/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-create-details.html
+++ b/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-create-details.html
@@ -1,3 +1,4 @@
+<search></search>
 <ol class="breadcrumb clean">
   <li>
     <a href="" ui-sref="city.report" main-toggle="slide-left"><i class="fa fa-th"></i></a>
