--- a/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-status-result.html
+++ b/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-status-result.html
@@ -1,4 +1,4 @@
-
+<search></search>
 <ol class="breadcrumb clean">
   <li>
     <a href="" main-toggle="slide-left"><i class="fa fa-search"></i></a>
