--- a/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-status.html
+++ b/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-status.html
@@ -1,4 +1,6 @@
 <div class="slide-left-2 issue-status">
+  
+  <search></search>
   <ol class="breadcrumb clean">
     <li class="active">
       <i class="fa fa-search"></i> Lookup service request
