--- a/includes/js/proud-actions-app/app/views/apps/311App/vote/vote-address.html
+++ b/includes/js/proud-actions-app/app/views/apps/311App/vote/vote-address.html
@@ -1,4 +1,12 @@
 <div class="slide-left-2 column">  
+  
+  <search></search>
+  <ol class="breadcrumb clean" style="margin-bottom: 0;">
+    <li class="active">
+      <i class="fa fa-compass"></i> Find your address
+    </li>
+  </ol>
+
   <h1>Voting is important</h1>
   <h3>Enter your address to find out where and how to vote and learn more about the issues on the ballot.</h3>
 
