--- a/includes/js/proud-actions-app/app/vote.html
+++ b/includes/js/proud-actions-app/app/vote.html
@@ -102,6 +102,9 @@
     <!-- build:js js/libraries.min.js -->
     <!-- bower:js -->
     <script src="bower_components/afkl-lazy-image/release/lazy-image.js"></script>
+    <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
+    <script src="bower_components/fontawesome-markers/index.js"></script>
+    <script src="bower_components/map-icons/dist/js/map-icons.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
