--- a/includes/js/proud-actions-app/app/views/apps/311App/faq/faq-child.html
+++ b/includes/js/proud-actions-app/app/views/apps/311App/faq/faq-child.html
@@ -1,3 +1,4 @@
+<search></search>
 <ol class="breadcrumb clean">
   <li>
     <a href="" main-toggle="slide-left"><i class="fa fa-th"></i><span class="sr-only">Select category</span></a>
