--- a/includes/js/proud-actions-app/app/views/apps/311App/payment/payment.html
+++ b/includes/js/proud-actions-app/app/views/apps/311App/payment/payment.html
@@ -1,4 +1,5 @@
 <div class="slide-left-2 column">
+  <search></search>
   <ol class="breadcrumb clean">
     <li class="active">
       <i class="fa fa-th"></i> Select payment type
